# impactArena

./: CMakeLists.txt  Makefile  README.md  TODO.txt
cmake/: FindCheck.cmake
src/: ball_physics.c  main.c  main.h  string_functions.c  test.txt
tests/: check_ball.c  test_ball
